[package]
name = "atomics-and-locks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "my_project"
path = "src/main.rs"
srcs = [
"channels.rs",
"simple_threads.rs",
"scoped_threads.rs"
]

[dependencies]
